3. Тесты на DbStore [#504817]